Update CRMicro website files

--- a/products/index.html
+++ b/products/index.html
@@ -3,178 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRMICRO Product Categories | Power Semiconductors</title>
-    <meta name="description" content="Explore CRMICRO's comprehensive range of power semiconductors including MOSFETs, IGBTs, SiC/GaN, Power ICs, Sensors, and MCUs.">
-    <meta name="keywords" content="CRMICRO products, power semiconductors, MOSFET, IGBT, SiC, GaN, power IC, sensors, MCU">
+    <title>CRMicro Products | MOSFETs, IGBTs, Power ICs, Sensors</title>
+    <meta name="description" content="Browse our complete range of CRMicro products including MOSFETs, IGBTs, Power ICs, SiC, GaN, and Smart Sensors.">
+    <meta name="keywords" content="CRMicro products, MOSFET, IGBT, Power IC, SiC, GaN, Smart Sensors">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="canonical" href="https://crmicro.elec-distributor.com/products/">
-    <!-- Breadcrumb Schema -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "Home",
-        "item": "https://crmicro.elec-distributor.com/"
-      },{
-        "@type": "ListItem",
-        "position": 2,
-        "name": "Products",
-        "item": "https://crmicro.elec-distributor.com/products/"
-      }]
-    }
-    </script>
 </head>
 <body>
-    <!-- Header -->
+    <a href="#main-content" class="sr-only sr-only-focusable">跳转到主内容</a>
     <header class="header">
         <div class="container">
-            <div class="logo">
-                <object type="image/svg+xml" data="../svg/logo.svg" width="180" height="40">
-                    <img src="../images/logo-placeholder.png" alt="LiTong Logo - Authorized CRMICRO Distributor">
-                </object>
-            </div>
+            <a href="/" class="logo">LITONG Distributor</a>
             <nav class="nav-menu">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/products/">Products</a></li>
-                    <li><a href="/solutions/">Solutions</a></li>
-                    <li><a href="/support/">Support</a></li>
-                    <li><a href="/news/">News</a></li>
-                    <li><a href="/about/">About</a></li>
-                    <li><a href="/contact/">Contact</a></li>
-                </ul>
+                <a href="/">Home</a>
+                <a href="/" class="active">Products</a>
+                <a href="/solutions/">Solutions</a>
+                <a href="/support/">Support</a>
+                <a href="/news/">News</a>
+                <a href="/about/">About</a>
+                <a href="/contact/">Contact</a>
             </nav>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation menu">☰</button>
         </div>
     </header>
-
-    <!-- Breadcrumb Navigation -->
-    <div class="breadcrumb">
-        <div class="container">
-            <a href="/">Home</a> > <a href="/products/">Products</a> > <span>All Categories</span>
-        </div>
-    </div>
-
-    <!-- Product Categories -->
-    <section class="core-products">
-        <div class="container">
-            <h1>CRMICRO Product Categories</h1>
-            <p>As an authorized distributor, we offer the complete range of CR Micro power semiconductors. Explore our product categories to find the right solution for your application.</p>
-            
-            <div class="products-grid">
-                <div class="product-card">
-                    <div class="product-icon">
-                        <object type="image/svg+xml" data="../svg/mosfet-icon.svg" width="64" height="64">
-                            <img src="../images/mosfet-icon-placeholder.png" alt="CRMICRO MOSFET Icon">
-                        </object>
-                    </div>
-                    <h3>CRMICRO MOSFETs</h3>
-                    <p>SGT low-voltage, SJ-MOS high-voltage, and planar MOS series with superior performance</p>
-                    <a href="mosfet/">Explore CRMICRO MOSFETs</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-icon">
-                        <object type="image/svg+xml" data="../svg/igbt-icon.svg" width="64" height="64">
-                            <img src="../images/igbt-icon-placeholder.png" alt="CRMICRO IGBT Icon">
-                        </object>
-                    </div>
-                    <h3>CRMICRO IGBTs</h3>
-                    <p>Single transistors, IPM modules, and PIM modules for high-power applications</p>
-                    <a href="igbt/">Explore CRMICRO IGBTs</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-icon">
-                        <object type="image/svg+xml" data="../svg/power-ic-icon.svg" width="64" height="64">
-                            <img src="../images/power-ic-icon-placeholder.png" alt="CRMICRO Power IC Icon">
-                        </object>
-                    </div>
-                    <h3>CRMICRO Power ICs</h3>
-                    <p>Power management, BMS, motor driver, and other power ICs for system control</p>
-                    <a href="power-ic/">Explore CRMICRO Power ICs</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-icon">
-                        <object type="image/svg+xml" data="../svg/sensor-icon.svg" width="64" height="64">
-                            <img src="../images/sensor-icon-placeholder.png" alt="CRMICRO Sensor Icon">
-                        </object>
-                    </div>
-                    <h3>CRMICRO Sensors</h3>
-                    <p>MEMS smoke sensors, photoelectric sensors, and smart sensors for IoT applications</p>
-                    <a href="sensors/">Explore CRMICRO Sensors</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-icon">
-                        <object type="image/svg+xml" data="../svg/mcu-icon.svg" width="64" height="64">
-                            <img src="../images/mcu-icon-placeholder.png" alt="CRMICRO MCU Icon">
-                        </object>
-                    </div>
-                    <h3>CRMICRO MCUs</h3>
-                    <p>Microcontrollers for intelligent control and system integration</p>
-                    <a href="mcu/">Explore CRMICRO MCUs</a>
-                </div>
-                <div class="product-card">
-                    <div class="product-icon">
-                        <object type="image/svg+xml" data="../svg/si-gan-icon.svg" width="64" height="64">
-                            <img src="../images/si-gan-icon-placeholder.png" alt="CRMICRO SiC & GaN Icon">
-                        </object>
-                    </div>
-                    <h3>CRMICRO SiC & GaN</h3>
-                    <p>Wide bandgap semiconductors for high-efficiency, high-frequency applications</p>
-                    <a href="si-gan/">Explore CRMICRO SiC & GaN</a>
-                </div>
-            </div>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Products</h1>
+            <p>Complete range of CRMicro power semiconductors</p>
         </div>
     </section>
-
-    <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h4>Products</h4>
-                    <ul>
-                        <li><a href="/products/mosfet/">MOSFETs</a></li>
-                        <li><a href="/products/igbt/">IGBTs</a></li>
-                        <li><a href="/products/si-gan/">SiC & GaN</a></li>
-                        <li><a href="/products/power-ic/">Power ICs</a></li>
-                        <li><a href="/products/sensors/">Sensors</a></li>
-                        <li><a href="/products/mcu/">MCUs</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Solutions</h4>
-                    <ul>
-                        <li><a href="/solutions/ev-charging/">EV Charging</a></li>
-                        <li><a href="/solutions/power-inverters/">Power Inverters</a></li>
-                        <li><a href="/solutions/motor-drives/">Motor Drives</a></li>
-                        <li><a href="/solutions/pd-chargers/">PD Chargers</a></li>
-                        <li><a href="/solutions/bms/">BMS Solutions</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Support</h4>
-                    <ul>
-                        <li><a href="/support/selection-guides/">Selection Guides</a></li>
-                        <li><a href="/support/application-notes/">Application Notes</a></li>
-                        <li><a href="/support/faq/">FAQ</a></li>
-                        <li><a href="/support/substitution/">Substitution Guide</a></li>
-                        <li><a href="/contact/">Technical Support</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Contact Us</h4>
-                    <p>LiTong Electronics</p>
-                    <p>Authorized CRMICRO Distributor</p>
-                    <p><a href="mailto:info@elec-distributor.com">info@elec-distributor.com</a></p>
-                    <p>+852 1234 5678</p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 LiTong Electronics. Authorized Distributor for CR Micro (CRMICRO).</p>
-            </div>
+        <div class="container text-center">
+            <p>&copy; 2025 CRMicro Core Distributor. All rights reserved.</p>
         </div>
     </footer>
+    <script src="../js/main.js"></script>
 </body>
 </html>
